--- a/blocks/card/__like-button/_active/card__like-button_active.css
+++ b/blocks/card/__like-button/_active/card__like-button_active.css
@@ -2,5 +2,5 @@
   background-image: url(../../../../images/heart_icon_active.svg);
 }
 .card__like-button_active:hover {
-  background-image: url(../../../../images/heart_icon_active.svg);
+  opacity: 0.5;
 }
