--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -11,5 +11,6 @@
 }
 
 .card__like-button:hover {
-  background-image: url(../../../images/heart_icon_hover.svg);
+  opacity: 0.5;
+  cursor: pointer;
 }
