--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 880px;
-  height: 74px;
   margin: 45px auto 0;
+  padding: 0 0 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
@@ -9,12 +9,12 @@
   .header {
     width: 100%;
     margin-top: 28px;
+    padding-bottom: 31.6px;
   }
 }
 
 @media screen and (max-width: 350px){
   .header {
     max-width: 320px;
-    height: 56px;
   }
 }
