--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   box-sizing: content-box;
   border: none;
+  transition: opacity .5s linear;
 }
 
 .card__like-button:hover {
