--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -3,19 +3,21 @@
   height: 50px;
   margin: 48px auto 37px;
   padding: 0;
-  border: none;
   text-align: center;
   background-color: black;
   color: #fff;
   font-style: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  font-weight: 400;
   border-radius: 2px;
+  border: none;
+  transition: opacity .5s linear;
 }
 
 .popup__submit:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 730px) {
@@ -23,5 +25,9 @@
     height: 46px;
     margin-top: 45px;
     margin-bottom: 25px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
