--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,11 +9,13 @@
   background-repeat: no-repeat;
   border: 1px solid rgba(255, 255, 255, 1);
   box-sizing: border-box;
+  transition: opacity .5s linear;
 }
 
 .profile__edit-button:hover {
-  background-image: url(../../../images/Edit_button_hover.svg);
+  opacity: 0.6;
   border-color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 730px) {
