--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,13 +4,5 @@
   justify-content: center;
   align-items: center;
   inset: 0;
-}
-
-.popup::before {
-  position: fixed;
-  inset: 0;
-  content: '';
-  background-color: #000;
-  opacity: 0.5;
-
+  background-color: rgba(0, 0, 0, 0.5);
 }
