feat: Выполнено 7 заданий 5го спринта итерация 1

--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,7 +1,7 @@
 .popup__button-close {
-  position: relative;
+  position: absolute;
   top: -40px;
-  left: 438px;
+  right: -40px;
   width: 32px;
   height: 32px;
   padding: 0;
@@ -22,6 +22,6 @@
     width: 20px;
     height: 20px;
     top: -36px;
-    left: 262px;
+    right: 0;
   }
 }
