--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,16 +1,16 @@
 .popup__container {
-  width: 430px;
+  min-width: 430px;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   background-color: #FFFFFF;
-  z-index: 1;
+  position: relative;
 }
 
 @media screen and (max-width: 730px) {
   .popup__container {
-    width: 282px;
+    min-width: 282px;
   }
 }
 
