--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
   max-width: 330px;
-  margin: 0 0 0 36px;
+  margin: 34px 0 0 36px;
   font-size: 24px;
   line-height: 29px;
   font-weight: 900;
@@ -12,7 +12,7 @@
     max-width: 238px;
     margin-left: 22px;
     margin-right: 22px;
-    margin-top: 7px;
+    margin-top: 25px;
     font-size: 18px;
     line-height: 22px;
   }
