--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url('./../blocks/profile/__add-button/profile__add-button.css');
 @import url('./../blocks/cards/cards.css');
 @import url('./../blocks/card/card.css');
+@import url('./../blocks/card/__trash-button/card__trash-button.css');
 @import url('./../blocks/card/__image/card__image.css');
 @import url('./../blocks/card/__group/card__group.css');
 @import url('./../blocks/card/__title/card__title.css');
@@ -25,7 +26,11 @@
 @import url('./../blocks/footer/__copyright/footer__copyright.css');
 @import url('./../blocks/popup/popup.css');
 @import url('./../blocks/popup/_opened/popup_opened.css');
+@import url('./../blocks/popup/_type/popup_type_big-photo.css');
+@import url('./../blocks/popup/__big-size-title/popup__big-size-title.css');
+@import url('./../blocks/popup/__big-size-photo/popup__big-size-photo.css');
 @import url('./../blocks/popup/__container/popup__container.css');
+@import url('./../blocks/popup/__container/_type/popup__container_type_big-photo.css');
 @import url('./../blocks/popup/__title/popup__title.css');
 @import url('./../blocks/popup/__button-close/popup__button-close.css');
 @import url('./../blocks/popup/__form/popup__form.css');
