--- a/pages/index.css
+++ b/pages/index.css
@@ -34,6 +34,14 @@
 @import url('./../blocks/popup/__title/popup__title.css');
 @import url('./../blocks/popup/__button-close/popup__button-close.css');
 @import url('./../blocks/popup/__form/popup__form.css');
+
+@import url('./../blocks/popup/__set/popup__set.css');
+@import url('./../blocks/popup/__label/popup_label.css');
 @import url('./../blocks/popup/__input-field/popup__input-field.css');
+@import url('./../blocks/popup/__input-field/_type/popup__input-field_type_error.css');
+@import url('./../blocks/popup/__input-error/popup__input-error.css');
 @import url('./../blocks/popup/__submit/popup__submit.css');
+@import url('./../blocks/popup/__submit/_disabled/popup__submit_disabled.css');
+
+
 
